# RIS_project

./: .gitignore  README.md  blue.csv  blue.txt  green.csv  green.txt  red.csv  red.txt  ring_data.txt  temp.py  test.data  traintf.py  yellow.csv
exercise3/launch/: amcl_simulation.launch
exercise4/: CMakeLists.txt  package.xml
exercise4/launch/: face_detector.launch
exercise4/scripts/: face_localizer_dnn  face_localizer_dnn.py  homework4.py  ros_log.txt
exercise4/src/: face_clustering_node.cpp
src/clustering/: CMakeLists.txt  package.xml
src/clustering/msg/: Cluster2D.msg  Cluster2DArray.msg
src/clustering/src/: clustering_2d_lib.h  clustering_2d_lib.hpp  clustering_2d_node.cpp
src/clustering/srv/: Clustering2DService.srv
src/exercise3/: ris_world_1.pgm  ris_world_1.yaml  ris_world_1_bad.pgm
src/exercise3/launch/: amcl_simulation.launch  rins_world.launch
src/exercise3/src/: map_goals.cpp
src/exercise4/launch/: face_detector.launch
src/exercise4/scripts/: face_localizer_dnn  face_localizer_dnnv2.py
src/exercise4/src/: face_clustering_node.cpp
src/exercise5/: CMakeLists.txt  package.xml
src/exercise5/src/: auto_goals_node.cpp
src/exercise6/: CMakeLists.txt  package.xml
src/exercise6/launch/: find_stuff.launch
src/exercise6/scripts/: classify_colour_service.py  detect_rings  rings_and_cylinders
src/exercise6/src/: cylinder_segmentation.cpp  find_cylinders_node.cpp  find_rings_node.cpp  find_stuff_node.cpp  move_it_node.cpp
src/finale/: CMakeLists.txt  package.xml
src/hw4/: CMakeLists.txt  README.md  package.xml
(+65 files in other folders)
